...
            CustomerDataModel(name: "Qatar Airways", iataCode: "QR", icaoCode: "QTR"),
            CustomerDataModel(name: "TAP Air Portugal", iataCode: "TP", icaoCode: "TAP"),
            CustomerDataModel(name: "Iberia", iataCode: "IB", icaoCode: "IBE"),
            CustomerDataModel(name: "Vueling", iataCode: "VY", icaoCode: "VLG"),
            CustomerDataModel(name: "easyJet", iataCode: "U2", icaoCode: "EZY"),
            CustomerDataModel(name: "Norwegian Air Shuttle", iataCode: "DY", icaoCode: "NOZ"),
            CustomerDataModel(name: "Aegean Airlines", iataCode: "A3", icaoCode: "AEE"),
            CustomerDataModel(name: "airBaltic", iataCode: "BT", icaoCode: "BTI"),
            CustomerDataModel(name: "Eurowings", iataCode: "EW", icaoCode: "EWG"),
            CustomerDataModel(name: "Pegasus Airlines", iataCode: "PC", icaoCode: "PGT"),
            CustomerDataModel(name: "SunExpress", iataCode: "XQ", icaoCode: "SXS"),
            CustomerDataModel(name: "Air Serbia", iataCode: "JU", icaoCode: "ASL"),
            CustomerDataModel(name: "Croatia Airlines", iataCode: "OU", icaoCode: "CTN"),
...
